--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.3",
+    "axios": "^0.21.1",
+    "js-cookie": "^3.0.0",
     "vue": "^3.0.5",
+    "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
